--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.25.4
   firebase_database: ^10.4.6
+  firebase_auth: ^4.3.0
+  cloud_firestore: ^4.15.5
 
 dev_dependencies:
   flutter_test:
