--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.25.4
+  firebase_database: ^10.4.6
+  firebase_auth: ^4.3.0
+  cloud_firestore: ^4.15.5
+
   image_picker: ^0.8.0
   image_picker_web: ^3.1.1
 
