--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  firebase_core: ^2.25.4
-  firebase_database: ^10.4.6
-  firebase_auth: ^4.3.0
-  cloud_firestore: ^4.15.5
+  cupertino_icons:
+  firebase_core:
+  firebase_database:
+  firebase_auth:
+  cloud_firestore:
+  file_picker:
 
-  image_picker: ^0.8.0
-  image_picker_web: ^3.1.1
+  image_picker:
+  image_picker_web:
 
 
 dev_dependencies:
