--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,13 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-      - assets/logo.png
+    - assets/logo.png
+    - assets/purple.png
+    - assets/blue.png
+    - assets/blue-purple.png
+    - assets/orange.png
+    - assets/pink.png
+    - assets/turquoise.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
