--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   cloud_firestore: ^4.15.5
   firebase_storage: ^11.6.6
   file_picker: ^6.1.1
+  path_provider: ^2.0.2
+  url_launcher: ^6.2.6
+  flutter_pdfview: ^1.2.7
+  pdfx: ^2.6.0
+  intl: ^0.19.0
 
   image_picker: ^0.8.0
   image_picker_web: ^3.1.1
