--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: login_and_registration
+name: studyhive
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -32,17 +32,28 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons:
-  firebase_core:
-  firebase_database:
-  firebase_auth:
-  cloud_firestore:
-  file_picker:
+  cupertino_icons: ^1.0.2
+  firebase_core: ^2.25.4
+  firebase_database: ^10.4.6
+  firebase_auth: ^4.3.0
+  cloud_firestore: ^4.15.5
+  firebase_storage: ^11.6.6
+  file_picker: ^6.1.1
+  path_provider: ^2.0.2
+  url_launcher: ^6.2.6
+  flutter_pdfview: ^1.2.7
+  pdfx: ^2.6.0
+  intl: ^0.19.0
+  font_awesome_flutter : ^10.7.0
+  slider_button: ^2.1.0
 
-  image_picker:
-  image_picker_web:
+
+
+  image_picker: ^0.8.0
+  image_picker_web: ^3.1.1
 
 
 dev_dependencies:
@@ -67,7 +78,13 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-      - assets/logo.png
+    - assets/logo.png
+    - assets/purple.png
+    - assets/blue.png
+    - assets/blue-purple.png
+    - assets/orange.png
+    - assets/pink.png
+    - assets/turquoise.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
