--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: login_and_registration
+name: study_hive
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -27,9 +27,13 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+#dependencies:
+  #flutter:
+   # sdk: flutter
 dependencies:
   flutter:
     sdk: flutter
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -44,16 +48,30 @@ dependencies:
   path_provider: ^2.0.2
   url_launcher: ^6.2.6
   flutter_pdfview: ^1.2.7
-  pdfx: ^2.6.0
-  intl: ^0.19.0
-
+  http: ^0.13.3
   image_picker: ^0.8.0
   image_picker_web: ^3.1.1
-
+  #selenium_webdriver: ^2.0.0
+  provider: ^6.1.2
+  #pdfx: ^2.6.0
+  intl: ^0.19.0
+  build_runner:
+  #mockito: ^5.0.16
+  faker: ^2.0.0
+  mocktail: ^1.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  #mockito: ^5.4.4
+  rxdart:
+  flutter_automation: any
+  integration_test:
+    sdk: flutter
+
+
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -61,6 +79,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  test: ^1.24.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -74,12 +93,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/logo.png
-    - assets/purple.png
-    - assets/blue.png
-    - assets/blue-purple.png
-    - assets/orange.png
-    - assets/pink.png
-    - assets/turquoise.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -111,3 +124,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+
