--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: login_and_registration
+name: studyhive
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -46,6 +47,10 @@ dependencies:
   flutter_pdfview: ^1.2.7
   pdfx: ^2.6.0
   intl: ^0.19.0
+  font_awesome_flutter : ^10.7.0
+  slider_button: ^2.1.0
+
+
 
   image_picker: ^0.8.0
   image_picker_web: ^3.1.1
